Dodavanje osnovnih vijesti na api
